samples/_failures_safe/1761431960_43dd15_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1f1e83cc.c: In function ‘main’:
./samples/SAFE/__tmp_1f1e83cc.c:168:28: error: expected ‘)’ at end of input
  168 |         if (matrix_multiply
      |            ~               ^
      |                            )
./samples/SAFE/__tmp_1f1e83cc.c:168:9: error: expected declaration or statement at end of input
  168 |         if (matrix_multiply
      |         ^~
./samples/SAFE/__tmp_1f1e83cc.c:168:9: error: expected declaration or statement at end of input
